--- a/WpfApp2/Orders/OrdersListView.xaml
+++ b/WpfApp2/Orders/OrdersListView.xaml
@@ -1,15 +1,15 @@
-﻿<UserControl x:Class="WpfApp2.Customers.CustomersListView"
+﻿<UserControl x:Class="WpfApp2.Orders.OrdersListView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:cust="clr-namespace:WpfApp2.Customers"
+             xmlns:orders="clr-namespace:WpfApp2.Orders"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.DataContext>
-        <cust:CustomersListViewModel/>
+        <orders:OrdersListViewModel/>
     </UserControl.DataContext>
     <Grid>
-        <DataGrid ItemsSource="{Binding Customers}"></DataGrid>
+        <DataGrid ItemsSource="{Binding Orders}"></DataGrid>
     </Grid>
 </UserControl>
