--- a/DemoGiorno4/MainWindow.xaml
+++ b/DemoGiorno4/MainWindow.xaml
@@ -14,41 +14,48 @@
 
 
     <Grid>
-        <DataGrid ItemsSource="{Binding Persone}"
-                  AutoGenerateColumns="False"
-                  CanUserAddRows="False"
-                  SelectionMode="Single">
-            
-            <DataGrid.Columns>
-                <DataGridTextColumn 
-                    Header="Nome" 
-                    Binding="{Binding Nome}" Width="*"/>
-                <DataGridTextColumn 
-                    Header="Cognome" 
-                    Binding="{Binding Cognome}" Width="*"/>
-                <DataGridTextColumn 
-                    Header="Email" 
-                    Binding="{Binding Email}" Width="*"/>
-                <DataGridTemplateColumn Header="Azioni" Width="Auto">
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <Button Content="Elimina"
-                                    Command="{Binding DataContext.EliminaPersonaCommand, 
-                                    RelativeSource={RelativeSource AncestorType=Window}}"
-                                    CommandParameter="{Binding}"
-                                    Padding="5" Margin="5"></Button>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                         
-                </DataGridTemplateColumn>
-                
-                
-            </DataGrid.Columns>
-            
-            
-        </DataGrid>
-        
-        
-        
+        <StackPanel Orientation="Vertical">
+            <StackPanel Orientation="Horizontal">
+                <Label Content="Nome"></Label>
+                <TextBox Width="50" Text="{Binding NuovaPersona.Nome}"></TextBox>
+                <Label Content="Cognome"></Label>
+                <TextBox Width="50" Text="{Binding NuovaPersona.Cognome}"></TextBox>
+                <Label Content="Email"></Label>
+                <TextBox Width="50" Text="{Binding NuovaPersona.Email}"></TextBox>
+                <Button Content="Aggiungi" 
+                        Command="{Binding AggiungiPersonaCommand}" 
+                        CommandParameter="{Binding NuovaPersona}"></Button>
+            </StackPanel>
+            <DataGrid ItemsSource="{Binding Persone}"
+                      AutoGenerateColumns="False"
+                      CanUserAddRows="False"
+                      SelectionMode="Extended"
+                      HeadersVisibility="Column"
+                      SelectionUnit="FullRow">
+
+                <DataGrid.Columns>
+                    <DataGridTextColumn 
+                        Header="Nome" 
+                        Binding="{Binding Nome}" Width="*"/>
+                    <DataGridTextColumn 
+                        Header="Cognome" 
+                        Binding="{Binding Cognome}" Width="*"/>
+                    <DataGridTextColumn 
+                        Header="Email" 
+                        Binding="{Binding Email}" Width="*"/>
+                    <DataGridTemplateColumn Header="Azioni" Width="Auto">
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <Button Content="Elimina"
+                                        Command="{Binding DataContext.EliminaPersonaCommand, 
+                                        RelativeSource={RelativeSource AncestorType=Window}}"
+                                        CommandParameter="{Binding}"
+                                        Padding="5" Margin="5"></Button>
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>
+                </DataGrid.Columns>
+            </DataGrid>
+        </StackPanel>
     </Grid>
 </Window>
