--- a/DemoDataErrorInfo/MainWindow.xaml
+++ b/DemoDataErrorInfo/MainWindow.xaml
@@ -12,7 +12,7 @@
             <Style.Triggers>
                 <Trigger Property="Validation.HasError" Value="True">
                     <Setter Property="ToolTip"
-                            Value="{Binding 
+                            Value="{Binding
                               (Validation.Errors)[0].ErrorContent,
                                 RelativeSource={RelativeSource Self}}">
                         
@@ -27,9 +27,21 @@
     </Window.DataContext>
     
     <StackPanel>
-        <TextBox Text="{Binding Nome, 
+        <Label Content="Nome"></Label>
+        <TextBox Text="{Binding Nome,
             UpdateSourceTrigger=PropertyChanged,
             ValidatesOnDataErrors=True,
-            NotifyOnValidationError=True}"  ></TextBox>        
+            NotifyOnValidationError=True}"></TextBox>
+        <Label Content="Cognome"></Label>
+        <TextBox Text="{Binding Cognome,
+            UpdateSourceTrigger=PropertyChanged,
+            ValidatesOnDataErrors=True,
+            NotifyOnValidationError=True}"></TextBox>
+        <Label Content="Email"></Label>
+        <TextBox Text="{Binding Email,
+            UpdateSourceTrigger=PropertyChanged,
+            ValidatesOnDataErrors=True,
+            NotifyOnValidationError=True}"></TextBox>
+        <!--<TextBlock Text="{Binding MessaggioErrore}"></TextBlock>-->
     </StackPanel>
 </Window>
